<resources>
    <string name="app_name">Geottendance</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_create_geofence">Map</string>
    <!-- Strings for teacher view -->
    <string name="generated_code">Code appears here</string>
    <string name="generate_btn">Generate</string>
    <string name="pressGenerate">Press Generate to generate your session code</string>
    <string name="apply_btn">Apply</string>
    <!-- Strings for student view -->
    <string name="enter_code">Enter your class code</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="end_session"> End Session</string>
    <string name="your_session_code_is"> Your session code is</string>
    <string name="begin_session"> Begin session?</string>
    <string name="begin">Begin</string>
    <string name="x" >X</string>
    <string-array name="user_array">
        <item>Student</item>
        <item>Instructor</item>
    </string-array>
</resources>