<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0000BCD4"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".data.model.LoginActivity">

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="295dp"
        android:layout_height="258dp"
        android:layout_marginStart="584dp"
        android:layout_marginBottom="964dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/gradient_button" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="172dp"
        android:layout_height="159dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.973"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/smileyface" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="626dp"
        android:layout_height="103dp"
        android:layout_marginTop="68dp"
        android:fontFamily="@font/julius_sans_one"
        android:text="Geottendance"
        android:textAlignment="textStart"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#626363"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/loginText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="204dp"
        android:fontFamily="@font/headland_one"
        android:text="Login"
        android:textColor="#626363"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.081"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="622dp"
        android:layout_height="669dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginText"
        app:srcCompat="@drawable/gradient_box" />

    <!--<Button-->

    <EditText
        android:id="@+id/username"
        android:layout_width="500dp"
        android:layout_height="120dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="392dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/transparent_bkgnd"
        android:drawableStart="@android:drawable/ic_dialog_email"
        android:drawablePadding="16dp"
        android:fontFamily="@font/headland_one"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:padding="16dp"
        android:selectAllOnFocus="true"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/password"
        android:layout_width="500dp"
        android:layout_height="120dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/transparent_bkgnd"
        android:drawableStart="@android:drawable/ic_lock_idle_lock"
        android:drawablePadding="16dp"
        android:fontFamily="@font/headland_one"
        android:hint="@string/prompt_password"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:padding="16dp"
        android:selectAllOnFocus="true"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login"
        android:layout_width="162dp"
        android:layout_height="91dp"
        android:layout_gravity="start"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/gradient_button"
        android:clickable="true"
        android:enabled="true"
        android:focusable="true"
        android:fontFamily="@font/julius_sans_one"
        android:text="Sign In"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#F6F5F5"
        android:textColorHighlight="#F8F6F6"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5"
        app:layout_constraintVertical_bias="0.418" />

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="64dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/password"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <!--<Button-->

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="500dp"
        android:layout_height="120dp"
        android:background="@drawable/transparent_bkgnd"
        android:padding="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintVertical_bias="0.073" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/registration"
        android:layout_width="162dp"
        android:layout_height="91dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="52dp"
        android:background="@drawable/gradient_button"
        android:fontFamily="@font/julius_sans_one"
        android:text="Register"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#FFFDFD"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5"
        app:layout_constraintVertical_bias="0.41000003" />

</androidx.constraintlayout.widget.ConstraintLayout>